# clinician-assist

./: .gitignore  .replit  admin.py  app.py  auth.py  chat_service.py  config.py  create_logo.py  db_reset.py  email_service.py  extensions.py  forms.py  models.py  pyproject.toml  replit.nix  utils.py
static/css/: custom.css
static/js/: validation.js  voice-chat.js
templates/: application.html  base.html
templates/admin/: audit_logs.html  edit_user.html  system_status.html  users.html
templates/auth/: login.html  register.html
templates/components/: chat_interface.html  footer.html  nav.html  navigation.html
templates/dashboard/: admin.html  client.html  therapist.html
