[project]
name = "repl-nix-healthsecurehub"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.2",
    "flask-session>=0.8.0",
    "bleach>=6.2.0",
    "sendgrid>=6.11.0",
    "pillow>=11.0.0",
    "wtforms",
    "sqlalchemy",
    "werkzeug",
]
