[project]
name = "repl-nix-healthsecurehub"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.2",
    "flask-session>=0.8.0",
    "bleach>=6.2.0",
    "sendgrid>=6.11.0",
    "cryptography>=43.0.3",
    "flask-socketio>=5.4.1",
    "openai>=1.54.3",
    "speechrecognition>=3.11.0",
    "pydub>=0.25.1",
    "python-socketio",
    "werkzeug",
    "python-dotenv",
    "eventlet>=0.37.0",
    "python-engineio",
    "simple-websocket>=1.1.0",
    "numpy",
    "pandas",
]
